# vEcoli

./: .buildinfo  .dockerignore  .env  .gcloudignore  .gitignore  .hpc_env_template  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  aws.html  ci.html  composites.html  data_ingestion.html  diffs.html  docs.html  experiments.html  gcloud.html  geneData.txt  genindex.html  hpc.html  iJO1366.Central metabolism.json  index.html  mypy.ini  nextflow.config  objects.inv  output.html  pathway_visualization.html  processes.html  py-modindex.html  pycharm.html  pyproject.toml  pytest.ini  req_sync.yaml  requirements.txt  requirements_antibiotics.txt  search.html  (+8 more)
.claude/: CLAUDE.md
.github/: dependabot.yml
Build_sequences.egg-info/: PKG-INFO  SOURCES.txt
FBA_compare/: FBA_violin.py  box_plot.py  data1_fast.xlsx  data2_metabolism.xlsx  data3_integrate_Composite.xlsx  data4_integrate_1,2.xlsx  data5_High.xlsx  escher_flux.py  heatmap_precision.py  merged_flux_data_complete.csv
Fast_polymerize_sums.egg-info/: PKG-INFO  SOURCES.txt
Monte_carlo_complexation.egg-info/: PKG-INFO  SOURCES.txt
_modules/: index.html
_sources/: ci.rst.txt  composites.rst.txt  diffs.rst.txt  docs.rst.txt  experiments.rst.txt  gcloud.rst.txt  hpc.rst.txt  index.rst.txt  output.rst.txt  processes.rst.txt  pycharm.rst.txt  stores.rst.txt  tutorial.rst.txt  workflows.rst.txt
cloud/: build-containers-locally.sh  build-runtime.sh  build-wcm.sh  cloud_build_conf.json  locally-build-wcm.sh
configs/: .gitignore  GFP_trial.json  Test_newanalysis_practice.json  __init__.py  analysisGFP.json  analysisGFPmass.json  analysis_for_mass.json  analysis_multiexperiment.json  analysis_single.json  c6_analysis_standalone.json  cell_wall_test_rig.json  cloud.json  cofactor_run.json  data_transformation.json  data_transformation_bulk.json  data_transformation_genes.json  default.json  default_classic.json  generate_save_states.json  homeostatic_target_scale_sweep.json  lysis_initiation.json  lysis_trigger.json  metabolism_redux.json  metabolism_redux_classic.json  metabolism_redux_classic_batch.json  metabolism_redux_classic_variant.json  metabolism_redux_classic_variants.json  metabolism_redux_classic_variants_2.json  metabolism_redux_classic_variants_sherlock.json  metabolism_redux_parca.json  multiparca_rnaseq_datasets.json  no_grc.json  protein_counts_analysis_test.json  protein_counts_test.json  protein_counts_test_with_wcCLMLNE1_parca.json  protein_counts_test_with_wcCLMLNE1_parca_starting_seed_1.json  run_analysis.json  run_parca.json  shape.json  strain_design_multi_variant.json  (+20 more)
data/: ceph_tet_sbml.xml  chromosome_replication_update_t1440.json  chromosome_replication_update_t1442.json  chromosome_replication_update_t2.json  chromosome_replication_update_t2142.json  chromosome_replication_update_t3144.json  colony_t12.json  colony_t1212.json  colony_t2.json  complexation_update11_t2.json  complexation_update2_t2.json  complexation_update3_t2.json  complexation_update4_t2.json  complexation_update5_t2.json  complexation_update6_t2.json  complexation_update7_t2.json  complexation_update9_t2.json  complexation_update_t2.json  elongation_sequences.npy  equilibrium_update_new_t62.json  equilibrium_update_t2.json  equilibrium_update_t62.json  ext_periplasm_sbml.xml  mass_listener_update_t0.json  mass_listener_update_t2.json  nitro_sbml.xml  periplasm_cytoplasm_sbml.xml  polypeptide_elongation_update_t1002.json  polypeptide_elongation_update_t12.json  polypeptide_elongation_update_t2.json  polypeptide_elongation_update_t4.json  polypeptide_elongation_update_t6.json  polypeptide_initiation_update_t1002.json  polypeptide_initiation_update_t102.json  polypeptide_initiation_update_t12.json  polypeptide_initiation_update_t2.json  proc_to_name.json  prot_deg_update_t10.json  prot_deg_update_t2.json  temp.json  (+10 more)
doc/: Makefile  aws.rst  build_search_index.py  ci.rst  composites.rst  conf.py  contributing.rst  data_ingestion.rst  diffs.rst  docs.rst  experiments.rst  gcloud.rst  hpc.rst  index.rst  model_fragility_map.md  output.rst  processes.rst  pycharm.rst  requirements.txt  sensitivity_campaigns.rst  stores.rst  tutorial.rst  tutorials.rst  workflows.rst
ecoli/: __init__.py  parameters.py  test_parameters.py
env/: pyvenv.cfg
genecoli/: __init__.py  _version.py  requirements.txt
migration/: __init__.py  allocator.py  chromosome_replication.py  chromosome_structure.py  complexation.py  composite_mass.py  dict_compare.py  dna_supercoiling.py  equilibrium.py  initial_state.py  mass_listener.py  metabolism.py  migration_utils.py  monomer_counts.py  mrna_counts.py  plots.py  polypeptide_elongation.py  polypeptide_initiation.py  protein_degradation.py  replication_data.py  ribosome_data.py  rna_counts.py  rna_degradation.py  rna_maturation.py  rna_synth_prob.py  rnap_data.py  test_migration.py  tf_binding.py  transcript_elongation.py  transcript_initiation.py  two_component_system.py  unique_molecule_counts.py
notebooks/: API_demo-Copy1.ipynb  API_demo.ipynb  Chemotaxis Testing.ipynb  FBAgd-demo-eschermap.json  FBAgd-demo.ipynb  Simplifying Reaction Networks.ipynb  Vivarium_ecoli_composites.ipynb  Vivarium_ecoli_processes.ipynb  allocation_processes.ipynb  antibiotics.ipynb  cofactor_protein_validation.ipynb  colony_simulations.ipynb  ecoli_simulations.ipynb  fba_gd eval.ipynb  fba_gd_scratchpad.ipynb  logger_processes.ipynb  view_cell.py
readmes/: causality.md  ecoli_configurations.md  ecoli_master_configurations.md
reconstruction/: __init__.py  spreadsheets.py
reference/: api_ref.html
runscripts/: __init__.py  analysis.py  create_gcp_bucket.sh  create_variants.py  extract_gene_metadata.py  kcats_sampling_config.py  nextflow_cleanup.py  parca.py  parca_bigraph.py  parca_workflow.py  (+7 more)
(+2359 files in other folders)
