[build-system]
# Pinning for maximum reproducibility, but this may be
# annoying to remember to update
requires = [
    "setuptools==80.10.2",
    "wheel==0.46.3",
    "Cython==3.1.2",
    "numpy==2.2.6"
]
build-backend = "setuptools.build_meta"

[project]
name = "vEcoli"
version = "1.1.2.post1"
description = "Whole Cell E. coli Model"
requires-python = "==3.12.9"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "biopython",
    "cvxpy",
    "dill",
    "duckdb",
    "gcsfs",
    "pyarrow",
    "ipdb",
    "ipython",
    "line-profiler",
    "altair",
    "numba",
    "orjson",
    # Constraint can be removed once cvxpy supports newer ortools
    # than 9.12, need 9.11 to support newer protobuf (see gh-326)
    "ortools<9.11",
    "pandas",
    "polars",
    "pymunk",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "swiglpk",
    "sympy",
    "tqdm",
    "unum",
    "vivarium-core",
    "imageio[ffmpeg]",
    "statsmodels",
    "ecos",
    "matplotlib",
    "iteround",
    "stochastic-arrow",
    "autograd",
    "xmltodict",
    # Required to save Altair charts as PNG
    "vl-convert-python",
    "pandera",
    "plum>=2.8.0",
    "process-bigraph>=1.0.6",
    "bigraph-schema>=1.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
    "jupyter",
    "marimo[sql,lsp]"
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "pre-commit"
]

[tool.setuptools]
packages = {find = {include = ["genecoli*", "configs*", "ecoli*", "reconstruction*", "runscripts*", "validation*", "wholecell*"]}}
include-package-data = true

[dependency-groups]
deployment = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
dev = [
    "pre-commit>=4.3.0",
]

