[build-system]
# Pinning for maximum reproducibility, but this may be
# annoying to remember to update
requires = [
    "setuptools==80.10.2",
    "wheel==0.46.3",
    "Cython==3.1.2",
    "numpy==2.2.6"
]
build-backend = "setuptools.build_meta"

[project]
name = "vEcoli"
version = "1.1.0"
description = "Whole Cell E. coli Model"
requires-python = "==3.12.12"
dependencies = [
    "numpy",
    "scipy",
    "biopython",
    "cvxpy",
    "dill",
    "duckdb",
    "gcsfs",
    "pyarrow",
    "ipdb",
    "ipython",
    "line-profiler",
    "altair",
    "numba",
    "orjson",
    # Constraint can be removed once cvxpy supports newer ortools
    # than 9.12, need 9.11 to support newer protobuf (see gh-326)
    "ortools<9.11",
    "pandas",
    "polars",
    "pymunk",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "swiglpk",
    "sympy",
    "tqdm",
    "unum",
    "vivarium-core",
    "imageio[ffmpeg]",
    "statsmodels",
    "ecos",
    "matplotlib",
    "iteround",
    "stochastic-arrow",
    "autograd",
    "xmltodict",
    # Required to save Altair charts as PNG
    "vl-convert-python",
    "pandera",
    "gillespy2>=1.8.3",
    "pymc>=5.27.0",
    "arviz-plots>=0.7.0",
    "arviz>=0.23.0",
    "s3fs>=2025.5.1",
    "cobra==0.31.1",
    "nbformat>=5.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
    "jupyter",
    "marimo[sql,lsp]",
    "rdkit>=2025.9.3",
    "google-cloud-billing",
    "google-cloud-compute",
    "boto3>=1.41.5",
    "botocore[crt]>=1.41.5",
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "pre-commit"
]

[tool.setuptools]
packages = [
    "configs",
    "ecoli",
    "reconstruction",
    "runscripts",
    "validation",
    "wholecell"
]
